--- a/sentiment_map/case_studies.Rmd
+++ b/sentiment_map/case_studies.Rmd
@@ -16,10 +16,93 @@ library(viridis)
 
 ```{r}
 # Load hex.sent
-load("plots/hex.sent") # This is for Twitter / Instagram hex data
+load("plots/hex.sent") # Twitter / Instagram hex level data
+load("plots/twitter.pa.sent") # Twitter planning area level data
+load("plots/insta.pa.sent") # Instagram planning area level data
+load("plots/richpoor.sent") # Rich / poor data
 ```
 
+```{r}
+p <- ggplot() +
+  geom_sf(data = twitter.pa.sent, aes(fill = cut(norm, c(0,0.25,0.3,0.35,0.4,0.45)), geometry = geometry, text = paste0(Name, "\n", "Sentiment: ", norm)), lwd = 0) + 
+  theme_void() +
+  coord_sf() +
+  scale_fill_viridis(
+    breaks=c(0,0.25,0.3,0.35,0.4,0.45),
+    name="Normalized Sentiment",
+    discrete = T,
+    guide=guide_legend(
+      keyheight = unit(3, units = "mm"),
+      keywidth=unit(12, units = "mm"),
+      label.position = "bottom",
+      title.position = 'top',
+      nrow=1)) +
+  labs(
+    title = "Sentiments of Singaporeans in Different Planning Zones",
+    subtitle = "Normalized Sentiment score = (Positive - Negative)/Total Count",
+    caption = "Data: Ate Poorthuis | Creation: Dragon Minions"
+  ) +
+  theme(
+    text = element_text(color = "#22211d"),
+    plot.background = element_rect(fill = "#f5f5f2", color = NA),
+    panel.background = element_rect(fill = "#f5f5f2", color = NA),
+    legend.background = element_rect(fill = "#f5f5f2", color = NA),
+    plot.title = element_text(size= 22, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.4, l = 2, unit = "cm")),
+    plot.subtitle = element_text(size= 17, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.43, l = 2, unit = "cm")),
+    plot.caption = element_text( size=12, color = "#4e4d47", margin = margin(b = 0.3, r=-99, unit = "cm") ),
+    legend.position = c(0.7, 0.09),
+    panel.grid.major = element_line(colour = 'transparent'),
+    panel.grid.minor = element_line(colour = 'transparent')
+  )
 
+p
+#ggplotly(p, tooltip = "text") %>%
+#  highlight(
+#    "plotly_hover",
+#    opacityDim = 1
+#  )
+```
+
+```{r}
+p <- ggplot() +
+  geom_sf(data = insta.pa.sent, aes(fill = cut(norm, c(0,0.25,0.4,0.415,0.43,0.46,0.5)), geometry = geometry, text = paste0(Name, "\n", "Sentiment: ", norm)), lwd = 0) + 
+  theme_void() +
+  coord_sf() +
+  scale_fill_viridis(
+    breaks=c(0,0.25,0.4,0.415,0.43,0.46),
+    name="Normalized Sentiment",
+    discrete = T,
+    guide=guide_legend(
+      keyheight = unit(3, units = "mm"),
+      keywidth=unit(12, units = "mm"),
+      label.position = "bottom",
+      title.position = 'top',
+      nrow=1)) +
+  labs(
+    title = "Instagram Sentiments of Singaporeans in Different Planning Zones",
+    subtitle = "Normalized Sentiment score = (Positive - Negative)/Total Count",
+    caption = "Data: Ate Poorthuis | Creation: Dragon Minions"
+  ) +
+  theme(
+    text = element_text(color = "#22211d"),
+    plot.background = element_rect(fill = "#f5f5f2", color = NA),
+    panel.background = element_rect(fill = "#f5f5f2", color = NA),
+    legend.background = element_rect(fill = "#f5f5f2", color = NA),
+    plot.title = element_text(size= 22, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.4, l = 2, unit = "cm")),
+    plot.subtitle = element_text(size= 17, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.43, l = 2, unit = "cm")),
+    plot.caption = element_text( size=12, color = "#4e4d47", margin = margin(b = 0.3, r=-99, unit = "cm") ),
+    legend.position = c(0.7, 0.09),
+    panel.grid.major = element_line(colour = 'transparent'),
+    panel.grid.minor = element_line(colour = 'transparent')
+  )
+
+p
+#ggplotly(p, tooltip = "text") %>%
+#  highlight(
+#    "plotly_hover",
+#    opacityDim = 1
+#  )
+```
 
 ```{r}
 p <- ggplot() +
@@ -135,5 +218,41 @@ p <- ggplot() +
   )
 
 p
+```
+
+
+```{r}
+p <- ggplot(polygons.sf) +
+  geom_sf(aes(fill = norm, text = paste0(Name, "\n", "Sentiment: ", norm)), lwd = 0) + 
+  theme_void() +
+  coord_sf() +
+  scale_fill_viridis(
+    breaks=c(0,0.25,0.4,0.415,0.43,0.46),
+    name="Normalized Sentiment",
+    guide=guide_legend(
+      keyheight = unit(3, units = "mm"),
+      keywidth=unit(12, units = "mm"),
+      label.position = "bottom",
+      title.position = 'top',
+      nrow=1)) +
+  labs(
+    title = "Sentiments of Singaporeans Living in Different Housing Types",
+    subtitle = "Normalized Sentiment score = (Positive - Negative)/Total Count",
+    caption = "Data: Ate Poorthuis | Creation: Dragon Minions"
+  ) +
+  theme(
+    text = element_text(color = "#22211d"),
+    plot.background = element_rect(fill = "#f5f5f2", color = NA),
+    panel.background = element_rect(fill = "#f5f5f2", color = NA),
+    legend.background = element_rect(fill = "#f5f5f2", color = NA),
+    plot.title = element_text(size= 22, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.4, l = 2, unit = "cm")),
+    plot.subtitle = element_text(size= 17, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.43, l = 2, unit = "cm")),
+    plot.caption = element_text( size=12, color = "#4e4d47", margin = margin(b = 0.3, r=-99, unit = "cm") ),
+    legend.position = c(0.7, 0.09),
+    panel.grid.major = element_line(colour = 'transparent'),
+    panel.grid.minor = element_line(colour = 'transparent')
+  )
+
+ggplotly(p)
 ```
 
