--- a/sentiment_map/case_studies.Rmd
+++ b/sentiment_map/case_studies.Rmd
@@ -12,6 +12,7 @@ library(spatstat)
 library(sf)
 library(viridis)
 library(classInt)
+library(ggmap)
 ```
 
 
@@ -24,12 +25,14 @@ load("plots/richpoor.sent") # Rich / poor data
 ```
 
 ```{r}
-tweets.sf <- mutate(tweets.sf, sent=pos-neg)
-ggplot(tweets.sf, aes(sent)) + geom_histogram() + ggtitle("Sentiment of Tweets, Kurtosis = 2.728617") + scale_x_continuous(limits=c(0,1.0))
+# tweets.sf <- mutate(tweets.sf, sent=pos-neg)
+# ggplot(tweets.sf, aes(sent)) + geom_histogram() + ggtitle("Sentiment of Tweets, Kurtosis = 2.728617") + scale_x_continuous(limits=c(0,1.0))
 ```
+
+
 ```{r}
-insta.sf <- mutate(insta.sf, sent=pos-neg)
-ggplot(insta.sf, aes(sent)) + geom_histogram() + ggtitle("Sentiment of Instagram Posts, Kurtosis = 3.14983") + scale_x_continuous(limits=c(0,1.0))
+# insta.sf <- mutate(insta.sf, sent=pos-neg)
+# ggplot(insta.sf, aes(sent)) + geom_histogram() + ggtitle("Sentiment of Instagram Posts, Kurtosis = 3.14983") + scale_x_continuous(limits=c(0,1.0))
 ```
 
 
@@ -198,18 +201,24 @@ hex.sent.odds <- hex.sent
 hex.sent.odds[hex.sent.odds$odds == 0,]$odds <- NA
 hex.sent.odds[hex.sent.odds$i.count < 10,]$odds <- NA
 hex.sent.odds[hex.sent.odds$t.count < 10,]$odds <- NA
+hex.sent.na <- hex.sent.odds %>% filter(is.na(odds))
+
+class_int <- classIntervals(hex.sent.odds$odds, n = 7, style = "quantile")
+rounded <- round(class_int$brks,2)
+
+breaks <- c(0,0.3,0.8,1.1,1.5,222)
+colors <- c("#03392B", "#37988D", "#86D0C3", "#edfdff", "#A3C2F8", "#76A7E9", "#0B5FC2")
 
 p <- ggplot() +
-  geom_sf(data = hex.sent, aes(fill=cut(odds, c(0,0.3,0.6,1,1.5,3)), geometry=geometry, text=paste0("Odds Ratio: ", odds)), lwd=0) + 
+  geom_sf(data = hex.sent.odds, aes(fill=cut(odds, breaks = class_int$brks, include.lowest = T), geometry=geometry, text=paste0("Odds Ratio: ", odds)), lwd=0) + 
   theme_void() +
   coord_sf() +
-  scale_fill_brewer(
-    palette="Spectral",
-    # breaks=c(0,0.3,0.6,1,1.5,2),
-    na.value="grey",
+  scale_fill_manual(
+    values = colors,
     name="Odds Ratio",
+    labels = rounded,
     guide=guide_legend(
-      keyheight = unit(3, units = "mm"),
+      keyheight = unit(2, units = "mm"),
       keywidth=unit(12, units = "mm"),
       label.position = "bottom",
       title.position = 'top',
@@ -221,61 +230,86 @@ p <- ggplot() +
   ) +
   theme(
     text = element_text(color = "#22211d"), 
-    plot.background = element_rect(fill = "#f5f5f2", color = NA), 
-    panel.background = element_rect(fill = "#f5f5f2", color = NA), 
-    legend.background = element_rect(fill = "#f5f5f2", color = NA),
+    plot.background = element_rect(fill = "#ffffff", color = NA), 
+    panel.background = element_rect(fill = "#ffffff", color = NA), 
+    legend.background = element_rect(fill = "#ffffff", color = NA),
     plot.title = element_text(size= 22, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.4, l = 2, unit = "cm")),
-    plot.subtitle = element_text(size= 17, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.43, l = 2, unit = "cm")),
-    plot.caption = element_text( size=12, color = "#4e4d47", margin = margin(b = 0.3, r=-99, unit = "cm") ),
-    legend.position = c(0.7, 0.09),
+    legend.position = c(0.745, 0.06),
     panel.grid.major = element_line(colour = 'transparent'), 
     panel.grid.minor = element_line(colour = 'transparent')
-  )
+  ) + 
+  geom_sf(data = hex.sent.na, lwd = 0)
 
-ggplotly(p, tooltip = "text") %>%
- highlight(
-   "plotly_hover",
-   opacityDim = 1
- )
+p
+# ggplotly(p, tooltip = "text") %>%
+#  highlight(
+#    "plotly_hover",
+#    opacityDim = 1
+#  )
 ```
 
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
-p <- ggplot(polygons.sf) +
-  geom_sf(aes(fill = norm, text = paste0(Name, "\n", "Sentiment: ", norm)), lwd = 0) + 
+
+rounded <- polygons.sf$norm %>% 
+  unique() 
+rounded <- rounded[order(rounded)]
+rounded <- round(rounded, 3)
+
+tampines <- get_map("Singapore-Tampines", zoom = 14, maptype = "toner-lines")
+
+p <- ggmap(tampines) +
+  geom_sf(data = polygons.sf,
+          aes(fill = factor(norm), text = paste0(Name, "\n", "Sentiment: ", round(norm,2))),
+          lwd = 0, 
+          alpha = 0.8,
+          inherit.aes = FALSE) + 
   theme_void() +
   coord_sf() +
   scale_fill_viridis(
-    breaks=c(0,0.25,0.4,0.415,0.43,0.46),
+    discrete = T,
     name="Normalized Sentiment",
+    labels = rounded,
     guide=guide_legend(
-      keyheight = unit(3, units = "mm"),
-      keywidth=unit(12, units = "mm"),
-      label.position = "bottom",
+      keyheight = unit(4, units = "mm"),
+      keywidth=unit(8, units = "mm"),
+      label.position = "right",
       title.position = 'top',
-      nrow=1)) +
+      alpha = 1)) +
   labs(
-    title = "Sentiments of Singaporeans Living in Different Housing Types",
+    title = "Sentiments of Singaporeans Living Near Tampines",
     subtitle = "Normalized Sentiment score = (Positive - Negative)/Total Count",
     caption = "Data: Ate Poorthuis | Creation: Dragon Minions"
   ) +
   theme(
     text = element_text(color = "#22211d"),
-    plot.background = element_rect(fill = "#f5f5f2", color = NA),
-    panel.background = element_rect(fill = "#f5f5f2", color = NA),
-    legend.background = element_rect(fill = "#f5f5f2", color = NA),
-    plot.title = element_text(size= 22, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.4, l = 2, unit = "cm")),
-    plot.subtitle = element_text(size= 17, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.43, l = 2, unit = "cm")),
-    plot.caption = element_text( size=12, color = "#4e4d47", margin = margin(b = 0.3, r=-99, unit = "cm") ),
-    legend.position = c(0.7, 0.09),
+    plot.background = element_rect(fill = "#ffffff", color = NA),
+    panel.background = element_rect(fill = "#ffffff", color = NA),
+    legend.background = element_rect(fill = "#ffffff", color = NA),
+    plot.title = element_text(size= 16, hjust=0.01, color = "#4e4d47", margin = margin(b = -0.1, t = 0.4, l = 2, unit = "cm")),
     panel.grid.major = element_line(colour = 'transparent'),
     panel.grid.minor = element_line(colour = 'transparent')
-  )
+  ) 
+
+#p
+
+l <- list(
+  font = list(
+    family = "sans-serif",
+    size = 12,
+    color = "#000"),
+  x = 0.7,
+  y = 0,
+  bgcolor = "transparent",
+  bordercolor = "#FFFFFF",
+  orientation = 'h',
+  borderwidth = 0)
 
 ggplotly(p, tooltip = "text") %>%
  highlight(
    "plotly_hover",
    opacityDim = 1
- )
+ ) %>%
+  layout(legend = l)
 ```
 
